# SLGNN

./: .gitignore  Informe_Estrategia_Entrenamiento_SLGNN.md  Informe_Sesion_SLGNN_Datos_y_Plan.md  Presentación formal del proyecto SLGNN.txt  README.md  SLGNN_versión2.txt  pyproject.toml  requirements.txt
configs/: gravity_rollout.yaml
data/: DATA_NOTES.md
scripts/: evaluate.py  mini_train.py  train.py
src/slgnn/: __init__.py  config.py  cutoff.py  data.py  experiment.py  graph.py  integrator.py  losses.py  model.py  nets.py  sdf.py  state.py
tests/: test_cutoff.py  test_data.py  test_graph.py  test_model.py  test_sdf.py
