[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "slgnn"
version = "0.1.0"
description = "SDF-Lagrangian Graph Neural Network para dinámica granular en molinos SAG"
requires-python = ">=3.11"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
